// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcModal displays input 1`] = `
<div aria-labelledby="oc-modal-title" class="oc-modal-background">
  <focus-trap-stub active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" initialfocus="[Function]">
    <div tabindex="0" role="dialog" aria-modal="true" class="oc-modal oc-modal-passive">
      <div class="oc-modal-title">
        <!---->
        <h2 id="oc-modal-title">Create new folder</h2>
      </div>
      <div class="oc-modal-body">
        <oc-text-input-stub id="oc-textinput-1" type="text" value="New folder" clearbuttonaccessiblelabel="" label="Folder name" fixmessageline="true" class="oc-modal-body-input"></oc-text-input-stub>
        <!---->
        <!---->
        <div class="oc-modal-body-actions oc-flex oc-flex-right">
          <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" class="oc-modal-body-actions-cancel">Cancel</oc-button-stub>
          <!---->
          <oc-button-stub type="button" size="medium" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" class="oc-modal-body-actions-confirm oc-ml-s">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>
`;

exports[`OcModal hides icon if not specified 1`] = `
<div aria-labelledby="oc-modal-title" class="oc-modal-background">
  <focus-trap-stub active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" initialfocus="[Function]">
    <div tabindex="0" role="dialog" aria-modal="true" class="oc-modal oc-modal-passive">
      <div class="oc-modal-title">
        <!---->
        <h2 id="oc-modal-title">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <p class="oc-modal-body-message">Example message</p>
        <!---->
        <!---->
        <div class="oc-modal-body-actions oc-flex oc-flex-right">
          <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" class="oc-modal-body-actions-cancel">Cancel</oc-button-stub>
          <!---->
          <oc-button-stub type="button" size="medium" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" class="oc-modal-body-actions-confirm oc-ml-s">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>
`;

exports[`OcModal matches snapshot 1`] = `
<div aria-labelledby="oc-modal-title" class="oc-modal-background">
  <focus-trap-stub active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" initialfocus="[Function]">
    <div tabindex="0" role="dialog" aria-modal="true" class="oc-modal oc-modal-passive">
      <div class="oc-modal-title">
        <oc-icon-stub name="info" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
        <h2 id="oc-modal-title">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <p class="oc-modal-body-message">Example message</p>
        <!---->
        <!---->
        <div class="oc-modal-body-actions oc-flex oc-flex-right">
          <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" class="oc-modal-body-actions-cancel">Cancel</oc-button-stub>
          <!---->
          <oc-button-stub type="button" size="medium" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" class="oc-modal-body-actions-confirm oc-ml-s">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>
`;

exports[`OcModal overrides props message with slot 1`] = `
<div aria-labelledby="oc-modal-title" class="oc-modal-background">
  <focus-trap-stub active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" initialfocus="[Function]">
    <div tabindex="0" role="dialog" aria-modal="true" class="oc-modal oc-modal-passive">
      <div class="oc-modal-title">
        <!---->
        <h2 id="oc-modal-title">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <div class="oc-modal-body-message">
          <p>Slot message</p>
        </div>
        <!---->
        <!---->
        <div class="oc-modal-body-actions oc-flex oc-flex-right">
          <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" class="oc-modal-body-actions-cancel">Cancel</oc-button-stub>
          <!---->
          <oc-button-stub type="button" size="medium" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" class="oc-modal-body-actions-confirm oc-ml-s">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>
`;
